bk_ida/gccida/c0/convert_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs/src/reg-stack.c:3281:1: error: unknown type name 'block_info_0'; did you mean 'block_info'?
block_info_0 bi; // [rsp+8h] [rbp-28h] 
^~~~~~~~~~~~
block_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs/src/reg-stack.c:202:4: note: 'block_info' declared here
} *block_info;
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs/src/reg-stack.c:3295:8: error: use of undeclared identifier 'block_info_0'
bi = ( block_info_0)b->aux; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs/src/obj/reg-stack.o] Error 1
